--- a/qof/AUTHORS
+++ b/qof/AUTHORS
@@ -1,8 +1,7 @@
-
 Derek Atkins <warlord@mit.edu>
 Rob Browning
-Bill Gribble
-Dave Peticolas
+Bill Gribble <grib@billgribble.com>
+Robin D. Clark <rclark@cs.hmc.edu>
+Dave Peticolas <dave@krondo.com>
 Linas Vepstas <linas@linas.org>
 Neil Williams <linux@codehelp.co.uk>
-
