--- a/qof/ChangeLog
+++ b/qof/ChangeLog
@@ -1,3 +1,10 @@
+2006-07-26  Neil Williams <linux@codehelp.co.uk>
+
+	* po/vi.po : Updated Vietnamese translation by
+	Clytie Siddall.
+	* po/ro.po : New Romanian translation by
+	Laurentiu Buzdugan.
+
 2006-07-24  Neil Williams <linux@codehelp.co.uk>
 
 	* qof/qofquerycore.c : Fix --disable-deprecated-qof
