--- a/qof/po/ChangeLog
+++ b/qof/po/ChangeLog
@@ -1,3 +1,11 @@
+2006-07-24 Laurentiu Buzdugan <lbuz@rolix.org>
+
+	* ro.po : New Romanian translation.
+
+2006-07-24 Clytie Siddall <clytie@riverland.net.au>
+
+	* vi.po : Updated Vietnamese translation for 0.7.0.
+
 2006-05-20 Daniel Nylander <po@danielnylander.se>
 
 	* sv.po : Updated Swedish translation for 0.6.4
