--- a/qof/ChangeLog
+++ b/qof/ChangeLog
@@ -1,3 +1,7 @@
+2006-08-15  Neil Williams <linux@codehelp.co.uk>
+
+	* configure.in : Enable extra compiler checks.
+
 2006-08-14  Neil Williams <linux@codehelp.co.uk>
 
 	* qof/test/test-book-merge.c : 
