prepare for release

--- a/qof/debian/changelog
+++ b/qof/debian/changelog
@@ -1,3 +1,9 @@
+qof (0.7.1-1) unstable; urgency=low
+
+  * New upstream release. 
+
+ -- Neil Williams <linux@codehelp.co.uk>  Tue, 29 Aug 2006 09:25:27 +0100
+
 qof (0.7.0-2) unstable; urgency=low
 
   * FTBFS on hppa, sparc and m68k: date test failures (Closes: #383746)
